Need to commit these before can pull

--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -104,7 +104,8 @@
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="1">
                             <Button x:Name="AddRaw" Content="Add" Click="AddRaw_Click" />
                             <Button x:Name="ClearRaw" Content="Clear" Click="ClearRaw_Click" />
-                            <Button x:Name="ChangeParameters" Content="Change Parameters" Click="ChangeFileSpecificParams_click" />
+                            <Button x:Name="ChangeParametersss" Content="Change Parameters" Click="ChangeFileSpecificParams_click" />
+                            <Button x:Name="TestWindow" Content="Test Window" Click="TestWindowTable_click" />
                         </StackPanel>
                     </Grid>
                 </GroupBox>
