--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -52,6 +52,22 @@
                         </StackPanel>
                     </Expander>
                 </GroupBox>
+                <GroupBox Header="Assumed Spectral Data Parameters" DockPanel.Dock="Top">
+                    <Expander x:Name="AssumedSpectraDataParametersExpander" Collapsed="ApmdExpander_Collapsed">
+                        <StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label Content="Precursor Mass Tolerance" />
+                                <TextBox x:Name="precursorMassToleranceTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" Width="45" />
+                                <ComboBox x:Name="precursorMassToleranceComboBox" HorizontalAlignment="Left" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label Content="Product Mass Tolerance" />
+                                <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" Width="45" />
+                                <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                            </StackPanel>
+                        </StackPanel>
+                    </Expander>
+                </GroupBox>
                 <GroupBox Header="Search Parameters" DockPanel.Dock="Top">
                     <Expander x:Name="SearchModeExpander" Collapsed="ApmdExpander_Collapsed">
                         <Expander.Style>
@@ -136,11 +152,6 @@
                                     </Grid.ColumnDefinitions>
                                     <StackPanel>
                                         <StackPanel Orientation="Horizontal" Margin="5">
-                                            <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
-                                            <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" Width="45" />
-                                            <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
-                                        </StackPanel>
-                                        <StackPanel Orientation="Horizontal" Margin="10,5,5,5">
                                             <CheckBox x:Name="addCompIonCheckBox" Content="Generate Complementary Ions" />
                                         </StackPanel>
                                     </StackPanel>
@@ -150,50 +161,24 @@
                                             <CheckBox x:Name="bCheckBox" Content="b ions" />
                                             <CheckBox x:Name="yCheckBox" Content="y ions" />
                                         </StackPanel>
-                                        <StackPanel Orientation="Horizontal" Margin="89,10,-69,10">
+                                        <StackPanel Orientation="Horizontal" Margin="87,5,5,5">
                                             <CheckBox x:Name="cCheckBox" Content="c ions" />
                                             <CheckBox x:Name="zdotCheckBox" Content="zdot ions" />
                                         </StackPanel>
                                     </StackPanel>
                                 </Grid>
                             </GroupBox>
-                            <GroupBox Header="Allowed Precursor Mass Differences">
-                                <Expander x:Name="ApmdExpander" Collapsed="ApmdExpander_Collapsed">
-                                    <Expander.Style>
-                                        <Style TargetType="Expander">
-                                            <Setter Property="Header" Value="{Binding ExpanderTitle}" />
-                                            <Style.Triggers>
-                                                <Trigger Property="IsExpanded" Value="True">
-                                                    <Setter Property="Header" Value="Hide" />
-                                                </Trigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </Expander.Style>
-                                    <StackPanel Margin="5">
-                                        <DataGrid x:Name="searchModesDataGrid" ItemsSource="{Binding}" AutoGenerateColumns="False" CanUserSortColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" Height="150" SelectionMode="Single">
-                                            <DataGrid.Columns>
-                                                <DataGridTemplateColumn Header="Use">
-                                                    <DataGridTemplateColumn.CellTemplate>
-                                                        <DataTemplate>
-                                                            <RadioButton Name="rbM" GroupName="CMGrp" IsChecked="{Binding Path=Use, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                                                        </DataTemplate>
-                                                    </DataGridTemplateColumn.CellTemplate>
-                                                </DataGridTemplateColumn>
-                                                <DataGridTemplateColumn Header="Name">
-                                                    <DataGridTemplateColumn.CellTemplate>
-                                                        <DataTemplate>
-                                                            <Label Content="{Binding Path=Name}" />
-                                                        </DataTemplate>
-                                                    </DataGridTemplateColumn.CellTemplate>
-                                                </DataGridTemplateColumn>
-                                            </DataGrid.Columns>
-                                        </DataGrid>
-                                        <StackPanel Orientation="Horizontal" Margin="5">
-                                            <TextBox x:Name="newAllowedPrecursorMassDiffsTextBox" Width="300" />
-                                            <Button x:Name="addNewAllowedPrecursorMassDiffsButton" Content="Add New Allowed Precursor Mass Diffs" Click="AddNewAllowedPrecursorMassDiffsButton_Click" />
-                                        </StackPanel>
-                                    </StackPanel>
-                                </Expander>
+                            <GroupBox Header="Mass Difference Acceptor Criterion">
+                                <StackPanel>
+                                    <RadioButton x:Name="mdacExact" Content="Exact" />
+                                    <RadioButton x:Name="mdac1mm" Content="1 Missed Monoisotopic Peak" />
+                                    <RadioButton x:Name="mdac2mm" Content="1 or 2 Missed Monoisotopic Peaks" />
+                                    <RadioButton x:Name="mdac3mm" Content="1, 2, or 3 Missed Monoisotopic Peaks" />
+                                    <RadioButton x:Name="mdac187" Content="-187 and Up" />
+                                    <RadioButton x:Name="mdacOpen" Content="Accept all" />
+                                    <RadioButton x:Name="mdacCustom" Content="Custom:" />
+                                    <TextBox x:Name="customkMdacTextBox"  IsEnabled="{Binding IsChecked, ElementName=mdacCustom}" />
+                                </StackPanel>
                             </GroupBox>
                             <GroupBox Header="Ambiguity Parameters">
                                 <Grid>
