GUI File Specific Parameters Implementation (#610)
* commit so can merge

* Shorten display filename

* sdv

* done

* asd

* asdf

* Update parametes

* remove commented code

* fixes

* Calibration file specific params implementation

* Fixed display and also made it so cant select files if their parameters differ

* remove unused code

* fix

* Need to commit these before can pull

* MGF support

* AF

* starting on new window

* gui

* More responsive display

* Fixes

* awee

* sadf

* fix of default init methodine values

* fixed issue where double clicking in certain places would cause crash

* Fixed issue where sometimes the Tolerance Type would be incorrect; now if no tolerance type is entered will default to PPM

* Changed display of tolerance to just number.... file should still be in the correct tolerance format

* sdaf

* final fixes

* sdaf

* change back to original account... woops

* Final

* asf

* fixes merge

* sdf

* Fixes/ remove code

* asdf

* codacy fixes

* comments

* asdf

* nothing

* Fixes

--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -60,7 +60,7 @@
                             <RowDefinition Height="*" />
                             <RowDefinition Height="20" />
                         </Grid.RowDefinitions>
-                        <DataGrid x:Name="dataGridDatafiles" ItemsSource="{Binding}" CanUserSortColumns="True" CanUserResizeColumns="False" CanUserReorderColumns="False" DockPanel.Dock="Top">
+                        <DataGrid x:Name="dataGridDatafiles" ItemsSource="{Binding}" CanUserSortColumns="True" CanUserResizeColumns="False" CanUserReorderColumns="False" DockPanel.Dock="Top" >
                             <DataGrid.Resources>
                                 <ResourceDictionary>
                                     <Style x:Key="{x:Type DataGridCell}" TargetType="{x:Type DataGridCell}">
@@ -81,12 +81,14 @@
                                         </Style.Triggers>
                                     </Style>
                                     <Style TargetType="{x:Type DataGridRow}">
+                                        <EventSetter Event="Selected" Handler="AddSelectedRaw" />
+                                        <EventSetter Event="Unselected" Handler="RemoveSelectedRaw" />
                                         <Setter Property="Background" Value="Transparent" />
                                         <Setter Property="BorderBrush" Value="Transparent" />
                                         <Setter Property="Foreground" Value="Black" />
                                         <Style.Triggers>
                                             <Trigger Property="IsSelected" Value="True">
-                                                <Setter Property="Background" Value="Transparent" />
+                                                <Setter Property="Background" Value="Coral" />
                                                 <Setter Property="BorderBrush" Value="Transparent" />
                                                 <Setter Property="Foreground" Value="Black" />
                                             </Trigger>
@@ -102,6 +104,7 @@
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="1">
                             <Button x:Name="AddRaw" Content="Add" Click="AddRaw_Click" />
                             <Button x:Name="ClearRaw" Content="Clear" Click="ClearRaw_Click" />
+                            <Button x:Name="ChangeFileParameters" Content="Change File Parameters" Click="ChangeFileParameters_Click" />
                         </StackPanel>
                     </Grid>
                 </GroupBox>
