--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -13,38 +13,43 @@
         </Grid.RowDefinitions>
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <DockPanel>
+                <StackPanel Orientation="Horizontal" Margin="5" DockPanel.Dock="Bottom">
+                    <Label Content="Output File Name" Margin="5"/>
+                    <TextBox x:Name="OutputFileName" Text="SearchTask"  Width="127" TextChanged="OutputFileName_TextChanged" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Height="27" TextAlignment="Left" VerticalContentAlignment="Center"/>
+                </StackPanel>
                 <GroupBox Header="File Loading Parameters" DockPanel.Dock="Top">
                     <Expander x:Name="FileLoadExpander" Collapsed="ApmdExpander_Collapsed">
                         <StackPanel>
-                        <GroupBox Header="Deisotoping">
-                        <StackPanel>
-                            <CheckBox x:Name="useProvidedPrecursor" Content="Use Provided Precursor" IsChecked="True" />
-                            <CheckBox x:Name="deconvolutePrecursors" Content="Deconvolute Precursors" IsChecked="True" />
-                            <StackPanel Orientation="Horizontal" Margin="5">
-                                <Label Content="Deconvolution Intensity Ratio " />
-                                <TextBox x:Name="DeconvolutionIntensityRatioTextBox" Width="45" />
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal" Margin="5">
-                                <Label Content="Deconvolution Max Assumed Charge State" />
-                                <TextBox x:Name="DeconvolutionMaxAssumedChargeStateTextBox" PreviewTextInput="PreviewIfInt" Width="45" />
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal" Margin="5">
-                                <Label Content="Deconvolution Mass Tolerance in PPM" />
-                                <TextBox x:Name="DeconvolutionMassToleranceInPpmTextBox" Width="45" />
-                            </StackPanel>
-                            </StackPanel>
+                      
+                            <GroupBox Header="Deisotoping">
+                                <StackPanel>
+                                    <CheckBox x:Name="useProvidedPrecursor" Content="Use Provided Precursor" IsChecked="True" />
+                                    <CheckBox x:Name="deconvolutePrecursors" Content="Deconvolute Precursors" IsChecked="True" />
+                                    <StackPanel Orientation="Horizontal" Margin="5">
+                                        <Label Content="Deconvolution Intensity Ratio " />
+                                        <TextBox x:Name="DeconvolutionIntensityRatioTextBox" Width="45" />
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal" Margin="5">
+                                        <Label Content="Deconvolution Max Assumed Charge State" />
+                                        <TextBox x:Name="DeconvolutionMaxAssumedChargeStateTextBox" PreviewTextInput="PreviewIfInt" Width="45" />
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal" Margin="5">
+                                        <Label Content="Deconvolution Mass Tolerance in PPM" />
+                                        <TextBox x:Name="DeconvolutionMassToleranceInPpmTextBox" Width="45" />
+                                    </StackPanel>
+                                </StackPanel>
                             </GroupBox>
                             <GroupBox Header="Peak Trimming">
                                 <StackPanel>
                                     <CheckBox x:Name="trimMs1" Content="Trim MS1 Peaks" IsChecked="True" />
                                     <CheckBox x:Name="trimMsMs" Content="Trim MS/MS Peaks" IsChecked="True" />
-                                <StackPanel Orientation="Horizontal" Margin="5">
-                                    <Label Content="Top N peaks" />
-                                    <TextBox x:Name="TopNPeaksCheckBox" Width="45" />
-                                </StackPanel>
-                                <StackPanel Orientation="Horizontal" Margin="5">
-                                    <Label Content="Minimum ratio" />
-                                    <TextBox x:Name="MinRatioCheckBox" Width="45" />
+                                    <StackPanel Orientation="Horizontal" Margin="5">
+                                        <Label Content="Top N peaks" />
+                                        <TextBox x:Name="TopNPeaksCheckBox" Width="45" />
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal" Margin="5">
+                                        <Label Content="Minimum ratio" />
+                                        <TextBox x:Name="MinRatioCheckBox" Width="45" />
                                     </StackPanel>
                                 </StackPanel>
                             </GroupBox>
