--- a/GUI/XLSearchTaskWindow.xaml
+++ b/GUI/XLSearchTaskWindow.xaml
@@ -13,9 +13,23 @@
         </Grid.RowDefinitions>
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <DockPanel>
-                <StackPanel Orientation="Horizontal" Margin="5" DockPanel.Dock="Bottom">
-                    <Label Content="Output File Name" Margin="5"/>
-                    <TextBox x:Name="OutputFileNameTextBox" Text="SearchTask"  Width="127" TextChanged="OutputFileName_TextChanged" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Height="27" TextAlignment="Left" VerticalContentAlignment="Center"/>
+                <StackPanel DockPanel.Dock="Bottom">
+                    <Grid>
+                        <Label Content="Output File Name" Margin="0,0,0,0"/>
+                        <TextBox x:Name="OutputFileNameTextBox" Margin="100,0,0,0" Width="150" HorizontalContentAlignment="Center" VerticalAlignment="Center"  HorizontalAlignment="Left" Height="27" TextAlignment="Left" VerticalContentAlignment="Center"/>
+                        <TextBlock Text="Enter Task Name" Margin="115,0,0,0" IsHitTestVisible="False" VerticalAlignment="Center"  HorizontalAlignment="Left"  Foreground="DarkGray">
+                            <TextBlock.Style>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding Text, ElementName=OutputFileNameTextBox}" Value="">
+                                            <Setter Property="Visibility" Value="Visible"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </TextBlock.Style>
+                        </TextBlock>
+                    </Grid>
                 </StackPanel>
                 <GroupBox Header="Crosslink Search" DockPanel.Dock="Top">
                     <Expander x:Name="CrosslinkSearchExpander">
