--- a/GUI/ChangeParametersWindow.xaml
+++ b/GUI/ChangeParametersWindow.xaml
@@ -7,48 +7,46 @@
         mc:Ignorable="d"
         Title="ChangeParametersWindow" Height="700" Width="500" WindowStartupLocation="CenterScreen">
     <StackPanel>
-        <DataGrid x:Name="ParameterGrid" ItemsSource="{Binding UpdateSourceTrigger=LostFocus, Mode=OneWay}" AlternatingRowBackground="LightGray" AlternationCount="2" >
+        <DataGrid x:Name="ParameterGrid" ItemsSource="{Binding UpdateSourceTrigger=LostFocus, Mode=OneWay}" AlternatingRowBackground="LightGray" AlternationCount="2">
             <DataGrid.Resources>
                 <Style TargetType="DataGridCell">
                     <EventSetter Event="MouseDoubleClick" Handler="Row_DoubleClick" />
                 </Style>
-                <local:TheTemplateSelector x:Key="templateSelector" >
+                <local:TheTemplateSelector x:Key="templateSelector">
                     <local:TheTemplateSelector.ComboBoxProtease>
                         <DataTemplate>
-                            <ComboBox Name="ComboBoxProtease" Width="81" ItemsSource="{Binding ProtList}" SelectedIndex="{Binding Value, UpdateSourceTrigger=LostFocus}"/>
+                            <ComboBox Name="ComboBoxProtease" Width="81" ItemsSource="{Binding ProtList}" SelectedIndex="{Binding Value, UpdateSourceTrigger=LostFocus}" />
                         </DataTemplate>
                     </local:TheTemplateSelector.ComboBoxProtease>
                     <local:TheTemplateSelector.ComboBoxTolerance>
                         <DataTemplate>
-                            <ComboBox Name="ComboBoxTolerance" Width="81" ItemsSource="{Binding ProductMassToleranceList}" SelectedIndex="{Binding Value, UpdateSourceTrigger=LostFocus}"/>
+                            <ComboBox Name="ComboBoxTolerance" Width="81" ItemsSource="{Binding ProductMassToleranceList}" SelectedIndex="{Binding Value, UpdateSourceTrigger=LostFocus}" />
                         </DataTemplate>
                     </local:TheTemplateSelector.ComboBoxTolerance>
                     <local:TheTemplateSelector.ComboBoxInit>
                         <DataTemplate>
-                            <ComboBox Name="ComboBoxInit" Width="81" ItemsSource="{Binding InitList}" SelectedIndex="{Binding Value, UpdateSourceTrigger=LostFocus}"/>
+                            <ComboBox Name="ComboBoxInit" Width="81" ItemsSource="{Binding InitList}" SelectedIndex="{Binding Value, UpdateSourceTrigger=LostFocus}" />
                         </DataTemplate>
                     </local:TheTemplateSelector.ComboBoxInit>
                     <local:TheTemplateSelector.TextBox>
                         <DataTemplate>
                             <TextBox Text="{Binding Value, UpdateSourceTrigger=LostFocus, Mode=TwoWay}"
-                          
+
                          Foreground="Black"
-                         TextAlignment="Center" 
-                         IsReadOnly="False"
-                                   />
+                         TextAlignment="Center"
+                         IsReadOnly="False" />
                         </DataTemplate>
                     </local:TheTemplateSelector.TextBox>
                     <local:TheTemplateSelector.Bool>
                         <DataTemplate>
-                            <CheckBox HorizontalAlignment="Center" IsChecked="{Binding Value, UpdateSourceTrigger=LostFocus }"/>
+                            <CheckBox HorizontalAlignment="Center" IsChecked="{Binding Value, UpdateSourceTrigger=LostFocus }" />
                         </DataTemplate>
                     </local:TheTemplateSelector.Bool>
                 </local:TheTemplateSelector>
-
             </DataGrid.Resources>
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Parameter Name"  Width="12*" Binding="{Binding ParamName, Mode=OneWay}"/>
-                <DataGridTemplateColumn CellTemplateSelector="{StaticResource templateSelector}" Header="Value" Width ="12*" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Parameter Name"  Width="12*" Binding="{Binding ParamName, Mode=OneWay}" />
+                <DataGridTemplateColumn CellTemplateSelector="{StaticResource templateSelector}" Header="Value" Width ="12*" IsReadOnly="True" />
                 <DataGridTemplateColumn Header="Unset">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -56,20 +54,20 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridCheckBoxColumn Header="Different in Selected Files"  Width ="10*" Binding="{Binding Different}" IsReadOnly="True"/>
+                <DataGridCheckBoxColumn Header="Different in Selected Files"  Width ="10*" Binding="{Binding Different}" IsReadOnly="True" />
             </DataGrid.Columns>
             <Style  TargetType="{x:Type DataGridColumnHeader}">
                 <EventSetter Event="MouseDoubleClick" Handler="Row_DoubleClick" />
-                <Setter Property="Background" Value="Orange"/>
-                <Setter Property="FontSize" Value="20"/>
-                <Setter Property="Padding" Value="5"/>
-                <Setter Property="BorderBrush" Value="Red"/>
-                <Setter Property="BorderThickness" Value="0 0 3 0"/>
+                <Setter Property="Background" Value="Orange" />
+                <Setter Property="FontSize" Value="20" />
+                <Setter Property="Padding" Value="5" />
+                <Setter Property="BorderBrush" Value="Red" />
+                <Setter Property="BorderThickness" Value="0 0 3 0" />
             </Style>
         </DataGrid>
         <DockPanel>
             <Frame DockPanel.Dock="Bottom" />
-            <Button x:Name="Save" Content="Save File Specific Settings" Click="Save_Click" FontSize="25" Grid.Row="3"/>
+            <Button x:Name="Save" Content="Save File Specific Settings" Click="Save_Click" FontSize="25" Grid.Row="3" />
             <Button x:Name="Cancel" Content="Cancel" Click="Cancel_Click" FontSize="15" Grid.Row="3" />
         </DockPanel>
     </StackPanel>
