--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -60,7 +60,7 @@
                             <RowDefinition Height="*" />
                             <RowDefinition Height="20" />
                         </Grid.RowDefinitions>
-                        <DataGrid x:Name="dataGridDatafiles" ItemsSource="{Binding}" CanUserSortColumns="True" CanUserResizeColumns="False" CanUserReorderColumns="False" DockPanel.Dock="Top" >
+                        <DataGrid x:Name="dataGridDatafiles" ItemsSource="{Binding}" CanUserSortColumns="True" CanUserResizeColumns="False" CanUserReorderColumns="False" DockPanel.Dock="Top">
                             <DataGrid.Resources>
                                 <ResourceDictionary>
                                     <Style x:Key="{x:Type DataGridCell}" TargetType="{x:Type DataGridCell}">
@@ -126,6 +126,7 @@
                             <RowDefinition Height="20" />
                             <RowDefinition Height="*" />
                             <RowDefinition Height="20" />
+                            <RowDefinition Height="36" />
                             <RowDefinition Height="40" />
                         </Grid.RowDefinitions>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
@@ -172,13 +173,11 @@
                             <Button x:Name="RemoveLastTaskButton" Content="Remove Last Task" Click="RemoveLastTask_Click" />
                             <Button x:Name="ResetTasksButton" Content="Reset Tasks" Click="ResetTasksButton_Click" />
                         </StackPanel>
-                        <Button x:Name="RunTasksButton" Content="Run all tasks!" Click="RunAllTasks_Click" FontSize="24" Grid.Row="3">
-                            <Button.ContextMenu>
-                                <ContextMenu AllowDrop="True">
-                                    <MenuItem Header="Add Folder Suffix" Click="AddMetaMorpheusTaskFolderSuffix_Click"></MenuItem>
-                                </ContextMenu>
-                            </Button.ContextMenu>
-                        </Button>
+                        <DockPanel Margin="5" Grid.Row="3" LastChildFill="True">
+                            <Label Content="Output Folder:" />
+                            <TextBox x:Name="OutputFolderTextBox" ToolTip="$DATETIME is automatically replaced by the current date and time" />
+                        </DockPanel>
+                        <Button x:Name="RunTasksButton" Content="Run all tasks!" Click="RunAllTasks_Click" FontSize="24" Grid.Row="4" />
                     </Grid>
                 </GroupBox>
                 <GridSplitter Grid.Row="1"
